-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.15.0-beta1
-
None
-
de072785cdb53877b1b4c1f64ffffd992f4ec689
- Build a project with many warnings
- Open the Issues pane
- Press End
- It should scroll to the bottom, but it doesn't
Might be related:
- Build a project with a lot of output
- Open the Compile Output pane
- Press Home
- It should scroll to the top and stay there, but it keeps moving back to the bottom.
The second issue seems to reproduce also on 4.14 (but worked with 4.13 IIRC). The first one I think is a regression in 4.15.
For Gerrit Dashboard: QTCREATORBUG-25432 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
341545,2 | ProjectExplorer: Make sure we always scroll to the new current item | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |