src/plugins/projectexplorer/taskwindow.cpp
@@ -78,7 +78,6 @@ class TaskView : public Utils::ListView
 {
 public:
     TaskView(QWidget *parent = nullptr);
-    void setCurrentAndScrollTo(const QModelIndex &index);
     ~TaskView() override;
 
 private:
@@ -211,12 +210,6 @@ TaskView::TaskView(QWidget *parent)
         vStepSize = TaskDelegate::Positions::minimumHeight();
 
     verticalScrollBar()->setSingleStep(vStepSize);
-}
-
-void TaskView::setCurrentAndScrollTo(const QModelIndex &index)
-{
-    scrollTo(index);
-    setCurrentIndex(index);
 }
 
 TaskView::~TaskView() = default;
@@ -482,6 +475,7 @@ void TaskWindow::currentChanged(const QModelIndex &index)
         ITaskHandler *h = d->handler(action);
         action->setEnabled((task.isNull() || !h) ? false : h->canHandle(task));
     }
+    d->m_listview->scrollTo(index);
 }
 
 void TaskWindow::saveSettings()
@@ -563,7 +557,7 @@ void TaskWindow::showTask(unsigned int id)
     int sourceRow = d->m_model->rowForId(id);
     QModelIndex sourceIdx = d->m_model->index(sourceRow, 0);
     QModelIndex filterIdx = d->m_filter->mapFromSource(sourceIdx);
-    d->m_listview->setCurrentAndScrollTo(filterIdx);
+    d->m_listview->setCurrentIndex(filterIdx);
     popup(Core::IOutputPane::ModeSwitch);
 }
 
@@ -692,7 +686,7 @@ void TaskWindow::setFocus()
     if (d->m_filter->rowCount()) {
         d->m_listview->setFocus();
         if (d->m_listview->currentIndex() == QModelIndex())
-            d->m_listview->setCurrentAndScrollTo(d->m_filter->index(0,0, QModelIndex()));
+            d->m_listview->setCurrentIndex(d->m_filter->index(0,0, QModelIndex()));
     }
 }
 
@@ -725,7 +719,7 @@ void TaskWindow::goToNext()
     } else {
         currentIndex = d->m_filter->index(0, 0);
     }
-    d->m_listview->setCurrentAndScrollTo(currentIndex);
+    d->m_listview->setCurrentIndex(currentIndex);
     triggerDefaultHandler(currentIndex);
 }
 
@@ -748,7 +742,7 @@ void TaskWindow::goToPrev()
     } else {
         currentIndex = d->m_filter->index(0, 0);
     }
-    d->m_listview->setCurrentAndScrollTo(currentIndex);
+    d->m_listview->setCurrentIndex(currentIndex);
     triggerDefaultHandler(currentIndex);
 }
 
